added collection http server
