# api/models/models.gen.go
@@ -3,6 +3,15 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version 2.5.1 DO NOT EDIT.
 package models
 
+// Collection defines model for Collection.
+type Collection struct {
+	// Description Description of the collection
+	Description *string `json:"description,omitempty"`
+
+	// Name Name of the collection
+	Name *string `json:"name,omitempty"`
+}
+
 // Error defines model for Error.
 type Error struct {
 	// Code Error code
@@ -21,10 +30,25 @@ type Label struct {
 	Name *string `json:"name,omitempty"`
 }
 
+// ListCollectionsResponse defines model for ListCollectionsResponse.
+type ListCollectionsResponse struct {
+	Data       *[]Collection `json:"data,omitempty"`
+	Pagination *Pagination   `json:"pagination,omitempty"`
+}
+
 // ListLabelsResponse defines model for ListLabelsResponse.
 type ListLabelsResponse struct {
 	Data       *[]Label    `json:"data,omitempty"`
 	Pagination *Pagination `json:"pagination,omitempty"`
+}
+
+// NewCollection defines model for NewCollection.
+type NewCollection struct {
+	// Description Description of the collection
+	Description *string `json:"description,omitempty"`
+
+	// Name Name of the collection
+	Name string `json:"name"`
 }
 
 // NewLabel defines model for NewLabel.
@@ -51,6 +75,15 @@ type Pagination struct {
 	TotalPages *int64 `json:"total_pages,omitempty"`
 }
 
+// ListCollectionsParams defines parameters for ListCollections.
+type ListCollectionsParams struct {
+	// Page page number
+	Page *int64 `form:"page,omitempty" json:"page,omitempty"`
+
+	// PageSize maximum number of collections to return
+	PageSize *int `form:"page_size,omitempty" json:"page_size,omitempty"`
+}
+
 // ListLabelsParams defines parameters for ListLabels.
 type ListLabelsParams struct {
 	// Page page number
@@ -59,6 +92,9 @@ type ListLabelsParams struct {
 	// PageSize maximum number of labels to return
 	PageSize *int `form:"page_size,omitempty" json:"page_size,omitempty"`
 }
+
+// CreateCollectionJSONRequestBody defines body for CreateCollection for application/json ContentType.
+type CreateCollectionJSONRequestBody = NewCollection
 
 // CreateLabelJSONRequestBody defines body for CreateLabel for application/json ContentType.
 type CreateLabelJSONRequestBody = NewLabel
