# api/server/server.go
@@ -5,10 +5,14 @@ import (
 )
 
 type Server struct {
-	Label *LabelServer
+	Label      *LabelServer
+	Collection *CollectionServer
 }
 
 func NewServer(dbPath string) *Server {
 	db := sqlite.NewSQLiteDB(dbPath)
-	return &Server{Label: NewHTTPLabelServer(db)}
+	return &Server{
+		Label:      NewHTTPLabelServer(db),
+		Collection: NewHTTPCollectionServer(db),
+	}
 }
